# docs/swagger.yaml
@@ -25,7 +25,7 @@ paths:
             type: string
       summary: 分类创建
       tags:
-      - 私有方法
+      - 管理员私有方法
   /admin/category-delete:
     delete:
       parameters:
@@ -46,7 +46,7 @@ paths:
             type: string
       summary: 分类删除
       tags:
-      - 私有方法
+      - 管理员私有方法
   /admin/category-modify:
     put:
       parameters:
@@ -75,7 +75,7 @@ paths:
             type: string
       summary: 分类修改
       tags:
-      - 私有方法
+      - 管理员私有方法
   /admin/problem-create:
     post:
       parameters:
@@ -118,7 +118,7 @@ paths:
             type: string
       summary: 问题创建
       tags:
-      - 私有方法
+      - 管理员私有方法
   /admin/problem-modify:
     put:
       parameters:
@@ -163,7 +163,7 @@ paths:
             type: string
       summary: 问题修改
       tags:
-      - 私有方法
+      - 管理员私有方法
   /category-list:
     get:
       parameters:
@@ -364,4 +364,31 @@ paths:
       summary: 用户详情
       tags:
       - 公共方法
+  /user/submit:
+    post:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: problem_identity
+        in: query
+        name: problem_identity
+        required: true
+        type: string
+      - description: code
+        in: body
+        name: code
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 代码提交
+      tags:
+      - 用户私有方法
 swagger: "2.0"
